--- a/samples/ImageLoading.Forms.Sample/Shared/Pages/ListPage.xaml
+++ b/samples/ImageLoading.Forms.Sample/Shared/Pages/ListPage.xaml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:local="clr-namespace:FFImageLoading.Forms.Sample;assembly=Shared" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="FFImageLoading.Forms.Sample.ListPage"
 		xmlns:xamvvm="clr-namespace:Xamvvm;assembly=Xamvvm.Forms"
 		xmlns:ffimageloading="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
